[gd_scene load_steps=8 format=3 uid="uid://cbksm33ruhkyo"]

[ext_resource type="Script" path="res://BaseUiScene.gd" id="1_2sfg5"]
[ext_resource type="PackedScene" uid="uid://c2r0cwflbfwf6" path="res://stonemine/StoneClickerScene.tscn" id="2_e76hg"]
[ext_resource type="PackedScene" uid="uid://d4d4gvho1g7qj" path="res://coppermine/RawCopperClickerScene.tscn" id="3_rfky2"]
[ext_resource type="PackedScene" uid="uid://c2oo4ppfxb1w7" path="res://coalmine/CoalClickerScene.tscn" id="4_2mc48"]
[ext_resource type="Texture2D" uid="uid://4tc3lw2lwdlu" path="res://textures/stone_resource.png" id="5_t6ims"]
[ext_resource type="Texture2D" uid="uid://tbie2dxw2tq2" path="res://textures/coal_resource.png" id="6_ppter"]
[ext_resource type="Texture2D" uid="uid://ctpi17npg4q34" path="res://textures/raw_copper_resource.png" id="7_h5um4"]

[node name="BaseUi" type="Control" node_paths=PackedStringArray("stoneMineButton", "copperMineButton", "coalMineButton", "stoneClickerScene", "copperClickerScene", "coalClickerScene", "stoneResourceLabel", "coalResourceLabel", "rawCopperResourceLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sfg5")
stoneMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/StoneMineButton")
copperMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/CopperMineButton")
coalMineButton = NodePath("ContainerMines/MarginContainer/GridContainer/CoalMineButton")
stoneClickerScene = NodePath("Mines/StoneClickerScene")
copperClickerScene = NodePath("Mines/RawCopperClickerScene")
coalClickerScene = NodePath("Mines/CoalClickerScene")
stoneResourceLabel = NodePath("ContainerResources/MarginContainer/GridContainer/StoneResourceLabel")
coalResourceLabel = NodePath("ContainerResources/MarginContainer/GridContainer/CoalResourceLabel")
rawCopperResourceLabel = NodePath("ContainerResources/MarginContainer/GridContainer/RawCopperResourceLabel")

[node name="Mines" type="Node" parent="."]

[node name="CoalClickerScene" parent="Mines" instance=ExtResource("4_2mc48")]
visible = false

[node name="RawCopperClickerScene" parent="Mines" instance=ExtResource("3_rfky2")]
visible = false

[node name="StoneClickerScene" parent="Mines" instance=ExtResource("2_e76hg")]
visible = false

[node name="ContainerResources" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 244.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ContainerResources"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="ContainerResources/MarginContainer"]
layout_mode = 2
columns = 2

[node name="StoneTexture" type="TextureRect" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Basic resource, not really used for much. Can be sold though!"
texture = ExtResource("5_t6ims")
expand_mode = 2

[node name="StoneResourceLabel" type="Label" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Stone: 0"

[node name="CoalTexture" type="TextureRect" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Coal is a resource you gather to smelt as fuel or as ingredient to create even better resources!"
texture = ExtResource("6_ppter")

[node name="CoalResourceLabel" type="Label" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Coal: 0"

[node name="RawCopperTexture" type="TextureRect" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
tooltip_text = "The basic ingredient for tons of other stuff! "
texture = ExtResource("7_h5um4")

[node name="RawCopperResourceLabel" type="Label" parent="ContainerResources/MarginContainer/GridContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 22
text = "Raw copper: 0"

[node name="ContainerMines" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ContainerMines"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ContainerMines/MarginContainer"]
layout_mode = 2
columns = 3

[node name="StoneMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stone Mine"

[node name="CopperMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Copper Mine"

[node name="CoalMineButton" type="Button" parent="ContainerMines/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Coal Mine"

[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/StoneMineButton" to="." method="_on_stone_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/CopperMineButton" to="." method="_on_copper_mine_button_button_down"]
[connection signal="button_down" from="ContainerMines/MarginContainer/GridContainer/CoalMineButton" to="." method="_on_coal_mine_button_button_down"]
